[package]
name = "liftright-data-server"
version = "0.4.0"
authors = ["Alexander Launi <alaun001@odu.edu>"]
edition = "2018"

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = ">=0.2.0, <0.7.0", features = ["serde", "v4"] }
log = "0.4"
pretty_env_logger = "0.4"
mongodb = "1.1.1"
lrds_derive = { path = "./lrds_derive" }
url = "2.1.1"
