[package]
name = "liftright-data-server"
version = "0.4.1"
authors = ["Alexander Launi <alaun001@odu.edu>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
warp = "0.2"
clap = "2.33"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = ">=0.2.0, <0.7.0", features = ["serde", "v4"] }
log = "0.4"
pretty_env_logger = "0.4"
mongodb = "1.1.1"
lrds_derive = { path = "./lrds_derive" }
actix-web = "3"
actix-files = "0.3.0"
actix-http = "2.0"
actix-rt = "1.1.1"
futures = "0.3.5"
color-eyre = "0.5.4"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2.1"
tracing-error = "0.1.2"
tracing-bunyan-formatter = "0.1.6"
tracing-actix-web = "0.2.1"
tracing-log = "0.1.1"
tracing = "0.1.21"

[dev-dependencies]
reqwest = "0.10.8"

